Fix running score and left align radios

--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ form {
 
 ul {
 	margin-top: 15px;
-	text-align: center;
+	text-align: left;
 	
 }
 li {
